--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.19",
     "validator": "^10.11.0"
   },
   "devDependencies": {
